<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialogContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background85"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical">


    <ImageButton
        android:id="@+id/clearImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="@android:color/transparent"
        android:padding="4dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:src="@drawable/ic_clear"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clearImageButton">

        <TextView
            android:id="@+id/renameUnitTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:paddingLeft="20dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/rename_unit"
            android:textAppearance="@style/TextLarge" />

        <TextView
            android:id="@+id/supportPagesTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:paddingLeft="20dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/support_pages"
            android:textAppearance="@style/TextLarge" />

        <RelativeLayout
            android:id="@+id/supportChatItemLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true">

            <TextView
                android:id="@+id/supportChatTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:text="@string/support_chat"
                android:textAppearance="@style/TextLarge" />

            <View
                android:id="@+id/supportChatAddonView"
                android:layout_width="@dimen/addon_circle_size"
                android:layout_height="@dimen/addon_circle_size"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/supportChatTextView"
                android:background="@drawable/circle_shape"
                android:backgroundTint="@color/purple"
                android:visibility="gone" />
        </RelativeLayout>

        <TextView
            android:id="@+id/aboutTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:paddingLeft="20dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/about"
            android:textAppearance="@style/TextLarge" />

        <TextView
            android:id="@+id/onlineStoreTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:paddingLeft="20dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/online_store"
            android:textAppearance="@style/TextLarge" />


    </LinearLayout>


</android.support.constraint.ConstraintLayout>